--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
 		background-image: url(imgs/bg13.jpg);
 	}
     #section15{
-        background-image: url(imgs/bg15.jpg);
     }
 
     #info2{
@@ -142,14 +141,12 @@
     .h1-1 {
         left: 58%;
         bottom: 30%;
-        color: #39e5cf;
     }
 
     .h1-3 {
         right: 10%;
         bottom: 10%;
         font-size: 3em;
-        color: #ff6633;
     }
 
     .h1-4 {
@@ -157,11 +154,9 @@
         bottom: 8%;
         max-width: 700px;
         font-size: 2.5em;
-        color: #7358c7;
     }
 
     .h1-5 {
-        color: #36d640;
         font-size: 4em;
         position: absolute;
         top: 20%;
@@ -303,8 +298,8 @@
                 navigation: true,
                 autoScrolling: false,
                 css3: true,
-                navigationTooltips: ['Коробка', 'История', 'Цена', 'Цвета', 'Вкусы', 'Отзывы', 'Омном', 'Кухня', 'Трёха', 'Сок', 'Коробки', 'Чёткие', 'Я', 'Вопросы', 'Доставка', 'Лайв', 'Лайк!', 'Заказать' ],
-                anchors: ['korobka', 'story', 'price', 'colors', 'tastes', 'otzyvy', 'omnom', 'kuhnya', 'treha', 'sok', 'korobki', 'chetkie', 'eto-ya', 'voprosy', 'dostavka', 'live', 'facebook', 'buy' ],
+                navigationTooltips: ['Коробка', 'История', 'Цена', 'Цвета', 'Вкусы', 'Отзывы', 'Омном', 'Кухня', 'Сок', 'Коробки', 'Я', 'Вопросы', 'Доставка', 'Лайв', 'Лайк!', 'Заказать' ],
+                anchors: ['korobka', 'story', 'price', 'colors', 'tastes', 'otzyvy', 'omnom', 'kuhnya', 'sok', 'korobki', 'eto-ya', 'voprosy', 'dostavka', 'live', 'facebook', 'buy' ],
 			});
 		});
 	</script>
@@ -329,7 +324,7 @@
 </div>
 
 <div id="fullpage">
-	<div class="section " id="section1"><h1 class="h1-1">7 пироженок<br />ассорти<br />ручной работы</h1></div>
+	<div class="section " id="section1"><h1 class="h1-1">7 пироженок<br />ручной работы<br /><a href="buy/">Заказать</a></h1></div>
     <div class="section" id="section-story">
         <p class="a" style="color:#fff;">
             Как всё началось
@@ -345,23 +340,20 @@
 Только новость достигла инстаграма, сработал эффект сарафанного ра... <a href="http://lililoveme.livejournal.com/102246.html" target="_blank" class="link">Продолжение в моём бложике</a>
         </p>
     </div>
-	<div class="section" id="section2"><h1 class="h1-3">Коробочка стоит 20 $,<br />к конкретному дню — 25 $</h1></div>
+	<div class="section" id="section2"><h1 class="h1-3">Цена коробочки — 20 $,<br />к конкретному дню — 25 $<br /><a href="buy/">Заказать</a></h1></div>
     <div class="section" id="insta1"><iframe src="http://instagram.com/p/m0lcT7gDzQ/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
-	<div class="section" id="section3"><h1 class="h1-4">В коробочке ассорти начинок, либо какая-то
-одна на ваш вкус. Малина, лимон, апельсин,
+	<div class="section" id="section3"><h1 class="h1-4">В коробочке ассорти начинок: малина, лимон, апельсин,
 шоколад, кофе, белый шоколад с ванилью и малиной,
-соленая карамель, арахис, мохито!
-Мои самые любимые — это соленая кармель
+соленая карамель, арахис, мохито...
+Мои любимые — солёная кармель
 и арахис!!! Но это для&nbsp;сладкоежек))
 Любителям не очень сладкого скорее
-всего приглянется кофе и лимон.</h1></div>
-    <div class="section" id="section4"><h1 class="h1-5">В <a href="http://instagram.com/lililovemeby" target="_blank" style="text-decoration: underline;">инстаграме</a> пишут:<br />«Божественны», «Сумасшедше&nbsp;вкусные»,<br />«Мегакрутые», «надо было брать две»</h1></div>
+всего приглянется кофе и лимон.<br /><a href="buy/">Заказать</a></h1></div>
+    <div class="section" id="section4"><h1 class="h1-5">В <a href="http://instagram.com/lililovemeby" target="_blank">инстаграме</a> пишут:<br />«Божественны», «Сумасшедше&nbsp;вкусные»,<br />«Мегакрутые», «надо было брать две»<br /><a href="buy/">Заказать</a></h1></div>
     <div class="section" id="section5"></div>
     <div class="section" id="insta1"><iframe src="http://instagram.com/p/msLoxdgD_z/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
-    <div class="section" id="section7"></div>
     <div class="section" id="section8"></div>
     <div class="section" id="insta1"><iframe src="http://instagram.com/p/mTXUl_gD2s/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
-    <div class="section" id="section10"><h1 class="h1-5"><a href="buy" style="text-decoration: underline;">Заточи пироженку!</a></h1></div>
     <div class="section" id="section12">
         <p class="q" style="color:#fff;">Да! Это я вам пеку макароны :))</p>
     </div>
@@ -399,7 +391,10 @@
     <div class="section" id="section14">
         <div class="fb-like-box" data-href="https://www.facebook.com/lililovemeby" data-width="920" data-height="580" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="false"></div>
     </div>
-    <div class="section" id="section15"><a href="buy/" class="calltoaction">Уииии! Заказать!</a></div>
+    <div class="section" id="section15"><a href="buy/" class="calltoaction">Уииии! Заказать!</a><br /><br />
+    <a href="#korobka" class="link">Наверх</a>
+    </div>
+
 </div>
 
 <!-- Yandex.Metrika counter -->
