--- a/buy/index.html
+++ b/buy/index.html
@@ -84,6 +84,8 @@
 </head>
 <body>
 
+<div id="header"></div>
+
 <div class="form">
 
 <form action="https://docs.google.com/forms/d/1Hx9uyYi29BLrRAcgCtGLy4ITiCXjv5Zth2Zd7h8iVBk/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
@@ -91,7 +93,7 @@
 <div dir="ltr" class="ss-item ss-item-required ss-text"><div class="ss-form-entry"><label class="ss-q-item-label" for="entry_339980997"><div class="ss-q-title">Меня зовут
 <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
 <span class="ss-required-asterisk">*</span></div>
-<input type="text" name="entry.339980997" value="" class="ss-q-short" id="entry_339980997" dir="auto" aria-label="Меня зовут Например: Туся Макароновна " aria-required="true" required="" title="" placeholder="Туся Макароновна">
+<input type="text" name="entry.339980997" value="" class="ss-q-short" id="entry_339980997" dir="auto" aria-label="Меня зовут Например: Туся Макароновна " aria-required="true" required="" title="" placeholder="Туся Макароновна" autofocus>
 <div class="error-message"></div>
 <div class="required-message"></div>
 
@@ -109,7 +111,7 @@
 <div class="error-message"></div>
 <div class="required-message"></div>
 </div></div></div> <div class="ss-form-question errorbox-good" role="listitem">
-<div dir="ltr" class="ss-item  ss-date"><div class="ss-form-entry"><label class="ss-q-item-label" for="entry_869129921"><div class="ss-q-title">Если вы хотите забрать макаронс к определённой дате, укажите месяц и день
+<div dir="ltr" class="ss-item  ss-date"><div class="ss-form-entry"><label class="ss-q-item-label" for="entry_869129921"><div class="ss-q-title">Если вы хотите забрать макаронс к определённой дате,<br />укажите месяц и день
 </div>
 <div class="ss-q-help ss-secondary-text" dir="ltr">А если вы готовы подождать — ничего не выбирайте</div></label>
 <div class="ss-q-date"><div class="ss-datetime-box goog-inline-block"> <select name="entry.869129921_month" class="ss-month-dropdown" id="entry.869129921_month" aria-label="Month"><option value="">Месяц</option>
@@ -127,10 +129,9 @@
 <span class="ss-choice-label">1 (одну) коробочку</span>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1131471125" value="2 (две) коробочки" id="group_1131471125_2" role="radio" class="ss-q-radio" aria-label="2 (две) коробочки" required="" aria-required="true"></span>
 <span class="ss-choice-label">2 (две) коробочки</span>
-</label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1131471125" value="3 (три) коробочки" id="group_1131471125_3" role="radio" class="ss-q-radio" aria-label="3 (три) коробочки" required="" aria-required="true"></span>
-<span class="ss-choice-label">3 (три) коробочки</span>
+</label></li>
 </label></li> <li class="ss-choice-item"><label><span class="ss-choice-item-control goog-inline-block"><input type="radio" name="entry.1131471125" value="__other_option__" id="group_1131471125_4" role="radio" class="ss-q-radio ss-q-other-toggle" required="" aria-required="true"></span>
-<span class="ss-choice-label">Ни одну, ни две, ни три, а:</span></label>
+<span class="ss-choice-label">Ни одну, ни две, а:</span></label>
 <span class="ss-q-other-container goog-inline-block"><input type="text" name="entry.1131471125.other_option_response" value="" class="ss-q-other" id="entry_1131471125_other_option_response" dir="auto" aria-label="Other"></span>
 </li></ul>
 <div class="error-message"></div>
