--- a/buy/index.html
+++ b/buy/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="../css/style.css" media="screen">
     <link rel="stylesheet" href="../css/google.css" media="screen">
 
+    <link rel="shortcut icon" href="../favicon.png" />
+    <link rel="apple-touch-icon" href="../favicon-152.png" />
+
 	<style>
 
     @font-face {
