--- a/buy/index.html
+++ b/buy/index.html
@@ -82,6 +82,16 @@
         margin:0 auto;
     }
 
+    .alert {
+        color: #3c763d;
+        background-color: #dff0d8;
+        border-color: #d6e9c6;
+        padding: 0 25px 0 25px;
+        margin-bottom: 20px;
+        border: 1px solid transparent;
+        border-radius: 4px;
+    }
+
 	</style>
 
 </head>
@@ -91,6 +101,8 @@
 </div>
 
 <div class="form">
+
+<div class="alert"><p>Алерт-алерт! С 15 августа до 15 сентября мы на каникулах и не принимаем заказы!</p></div>
 
 <form action="https://docs.google.com/forms/d/1Hx9uyYi29BLrRAcgCtGLy4ITiCXjv5Zth2Zd7h8iVBk/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
 <div class="ss-form-question errorbox-good" role="listitem">
