--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta refresh="3;http://lililoveme.by/">
+	
 	<title>Макаронс Lililoveme</title>
 	<meta name="author" content="Natali Mintwave" />
 	<meta name="description" content="" />
@@ -324,7 +326,9 @@
 </div>
 
 <div id="fullpage">
-	<div class="section " id="section1"><h1 class="h1-1">7 пироженок<br />ручной работы<br /><a href="buy/">Заказать</a></h1></div>
+	<div class="section" id="info1">
+    <p class="a">Мы открыли новый крутой магазин на <a href="http://lililoveme.by">lililoveme.by</a>. Сейчас вы будете перенаправлены.</p>
+    </div>
     <div class="section" id="section-story">
         <p class="a" style="color:#fff;">
             Как всё началось
