--- a/index.html
+++ b/index.html
@@ -321,82 +321,12 @@
 <div id="header">
 <a href="#korobka"><div class="logo"></div></a>
 <a href="buy/" class="link">Заказать макаронс</a>
-<a href="#voprosy" class="link" style="margin-left:30px;">Вопросы</a>
-<a href="#dostavka" class="link" style="margin-left:30px;">Доставка</a>
 </div>
 
 <div id="fullpage">
 	<div class="section" id="info1">
-    <p class="a">Мы открыли новый крутой магазин на <a href="http://lililoveme.by">lililoveme.by</a>. Сейчас вы будете перенаправлены.</p>
-    </div>
-    <div class="section" id="section-story">
-        <p class="a" style="color:#fff;">
-            Как всё началось
-            <br />
-            —
-            <br />
-            «Привет!!!!!)
-            <br />
-Как у вас дела!?) Ммм, все надеюсь супер!<br />
-Потому что, у меня просто супер настроение и супер новость) По картинкам вы уже, наверное, догадались)<br />
-Я долго доводила до ума эти маленькие зверские пироженки, и вот, настал момент,<br /> когда я с радостью могу принять от вас заказ на их изготовление!) Ыыыыть)<br />
-И у меня уже были ооочень плодотворные выходные в этом плане!<br />
-Только новость достигла инстаграма, сработал эффект сарафанного ра... <a href="http://lililoveme.livejournal.com/102246.html" target="_blank" class="link">Продолжение в моём бложике</a>
-        </p>
-    </div>
-	<div class="section" id="section2"><h1 class="h1-3">Цена коробочки — 20 $,<br />к конкретному дню — 25 $<br /><a href="buy/">Заказать</a></h1></div>
-    <div class="section" id="insta1"><iframe src="http://instagram.com/p/m0lcT7gDzQ/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
-	<div class="section" id="section3"><h1 class="h1-4">В коробочке ассорти начинок: малина, лимон, апельсин,
-шоколад, кофе, белый шоколад с ванилью и малиной,
-соленая карамель, арахис, мохито...
-Мои любимые — солёная кармель
-и арахис!!! Но это для&nbsp;сладкоежек))
-Любителям не очень сладкого скорее
-всего приглянется кофе и лимон.<br /><a href="buy/">Заказать</a></h1></div>
-    <div class="section" id="section4"><h1 class="h1-5">В <a href="http://instagram.com/lililovemeby" target="_blank">инстаграме</a> пишут:<br />«Божественны», «Сумасшедше&nbsp;вкусные»,<br />«Мегакрутые», «надо было брать две»<br /><a href="buy/">Заказать</a></h1></div>
-    <div class="section" id="section5"></div>
-    <div class="section" id="insta1"><iframe src="http://instagram.com/p/msLoxdgD_z/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
-    <div class="section" id="section8"></div>
-    <div class="section" id="insta1"><iframe src="http://instagram.com/p/mTXUl_gD2s/embed/" width="612" height="710" frameborder="0" scrolling="no" allowtransparency="true"></iframe></div>
-    <div class="section" id="section12">
-        <p class="q" style="color:#fff;">Да! Это я вам пеку макароны :))</p>
-    </div>
-    <div class="section" id="info1">
-    <p class="q">25 $ — это сколько макарон?</p>
-    <p class="a">В коробочке 300 грамм, это 7 больших макарон.</p>
-        <p class="break">—</p>
-    <p class="q">Сколько ждать, если не заказывать к конкретной дате?</p>
-    <p class="a">Обычно, у нас расписано всё на одну-две недели вперёд: будьте готовы подождать одну-две недели. </p>
-        <p class="break">—</p>
-    <p class="q">Можно ли выбирать вкусы?</p>
-    <p class="a">Нет, по умолчанию вы получите ассорти. Либо можете указать один конкретный вкус.</p>
-            <p class="break">—</p>
-    <p class="q">Какие бывают вкусы?</p>
-    <p class="a">Арахис, кофе, карамель, мята, лимон, вишня, красная смородина, шоколадная вишня.</p>
-            <p class="break">—</p>
-    <p class="q">Сколько можно хранить макаронс?</p>
-    <p class="a">В холодильнике до 5 дней.</p>
-    </div>
-    <div class="section" id="info2">
-    <p class="q">Как забрать макаронс?</p>
-    <p class="a">Забрать можно в Минске, недалеко от Востока или Фрунзенской. Адрес, карту и время мы вышлем в первом письме после заказа.</p>
-        <p class="break">—</p>
-    <p class="q">Есть ли у вас доставка?</p>
-    <p class="a">Нет, вы должны забрать макаронс сами.</p>
-        <p class="break">—</p>
-    <p class="q">Можно ли заказать в Москву, Питер, Ригу?</p>
-    <p class="a">Нет, Минск онли.</p>
-        <br /><br /><br />
-    <a href="mailto:jokleen@gmail.com" class="link">Спросите нас что-нибудь</a>
-        <p class="break"></p>
-    </div>
-    <div class="section" id="section13">
-        <a href="http://instagram.com/lililoveme" class="link" style="background: #fff;">&nbsp;Вся движуха в нашем инстаграме&nbsp;<br />&nbsp;instagram.com/lililoveme&nbsp;<br /><br />&nbsp;Посмотреть&nbsp;</a></div>
-    <div class="section" id="section14">
-        <div class="fb-like-box" data-href="https://www.facebook.com/lililovemeby" data-width="920" data-height="580" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="false" data-show-border="false"></div>
-    </div>
-    <div class="section" id="section15"><a href="buy/" class="calltoaction">Уииии! Заказать!</a><br /><br />
-    <a href="#korobka" class="link">Наверх</a>
+    <p class="a">Мы открыли новый крутой магазин на <a href="http://lililoveme.by">lililoveme.by</a>.</p>
+    <p class="a"><a href="http://lililoveme.by">Перейти и увидеть</a>.</p>    
     </div>
 
 </div>
