--- a/index.html
+++ b/index.html
@@ -297,11 +297,9 @@
 			$('#fullpage').fullpage({
                 verticalCentered: true,
                 easing: 'easeInQuart',
-                navigation: true,
+                navigation: false,
                 autoScrolling: false,
                 css3: true,
-                navigationTooltips: ['Коробка', 'История', 'Цена', 'Цвета', 'Вкусы', 'Отзывы', 'Омном', 'Кухня', 'Сок', 'Коробки', 'Я', 'Вопросы', 'Доставка', 'Лайв', 'Лайк!', 'Заказать' ],
-                anchors: ['korobka', 'story', 'price', 'colors', 'tastes', 'otzyvy', 'omnom', 'kuhnya', 'sok', 'korobki', 'eto-ya', 'voprosy', 'dostavka', 'live', 'facebook', 'buy' ],
 			});
 		});
 	</script>
@@ -320,7 +318,7 @@
 
 <div id="header">
 <a href="#korobka"><div class="logo"></div></a>
-<a href="buy/" class="link">Заказать макаронс</a>
+<a href="http://lililoveme.by/shop/macarons/" class="link">Заказать макаронс</a>
 </div>
 
 <div id="fullpage">
