--- a/buy/index.html
+++ b/buy/index.html
@@ -98,6 +98,7 @@
 <body>
 
 <div id="header">
+Теперь заказы принимаются в новом классном магазине <a href="http://lililoveme.by/shop/macarons/">lililoveme.by</a>
 </div>
 
 <div class="form">
