--- a/buy/index.html
+++ b/buy/index.html
@@ -98,10 +98,10 @@
 <body>
 
 <div id="header">
-Теперь заказы принимаются в новом классном магазине <a href="http://lililoveme.by/shop/macarons/">lililoveme.by</a>
 </div>
 
 <div class="form">
+<div>Теперь заказы принимаются в новом классном магазине <a href="http://lililoveme.by/shop/macarons/">lililoveme.by</a></div>
 
 <form action="https://docs.google.com/forms/d/1Hx9uyYi29BLrRAcgCtGLy4ITiCXjv5Zth2Zd7h8iVBk/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0">
 <div class="ss-form-question errorbox-good" role="listitem">
